' Generated by UML Generator
' Encoded: bLHDZzCm4BtdL_ZeicG572EeTbbHgLAB45s9mseFqyHDHtNjoECibBByTiP9d1fOKFUIUZxUcvTvJg_8W_FjNcUqGzE0WxqeDH1TU-zmtNerBwrPuNSbNcLRh9GeqPLQPLdN9PQ76Jho2pHUEN7CXFYvGQMhcNNN1lI1aDuVRhT8dvojcRmGA-OrjNWdZFew17UlxncOv_ouEB8WZ-MZs0CQ2Qwc2BcxdnJYmM8LUiUsXal-9cYHdQAFjbA5k8d7Vq9cGUKpCKlbj_QveBaXxzhIepKaznr33rsEvuXzZ5lrYdnOql6Kcg5M2mlLiELymt7HPSVLQIw714bsilLnRyo-GF9lGsaQ-chbmrbE1lmuOsLWfn8hBpIVPPX4ASSaClSwJ7Nh0Bcr_h95Ljv06KXOnabZr31dxbgv82FV0lqDb1ogHFdQMgt0d3H--0RxHWygtvmday5T-uO7YFIgdW7if_QW9L_9VllmmC9X7NL4U1zDep-zNqNYNQXG2SQ4zAe_ZFwTXiZ9-Pz2P_iWGoPfrveap85s_4q69VDmEUHl9bP8ZOR3PqMjzj9rFua9aOCfuo3zr7k_5F_VPNg_BYz_J8UrPdzucfQInTiyVoBxWhF9Vg-KgVZVx1S
' URL: http://www.plantuml.com/plantuml/uml/bLHDZzCm4BtdL_ZeicG572EeTbbHgLAB45s9mseFqyHDHtNjoECibBByTiP9d1fOKFUIUZxUcvTvJg_8W_FjNcUqGzE0WxqeDH1TU-zmtNerBwrPuNSbNcLRh9GeqPLQPLdN9PQ76Jho2pHUEN7CXFYvGQMhcNNN1lI1aDuVRhT8dvojcRmGA-OrjNWdZFew17UlxncOv_ouEB8WZ-MZs0CQ2Qwc2BcxdnJYmM8LUiUsXal-9cYHdQAFjbA5k8d7Vq9cGUKpCKlbj_QveBaXxzhIepKaznr33rsEvuXzZ5lrYdnOql6Kcg5M2mlLiELymt7HPSVLQIw714bsilLnRyo-GF9lGsaQ-chbmrbE1lmuOsLWfn8hBpIVPPX4ASSaClSwJ7Nh0Bcr_h95Ljv06KXOnabZr31dxbgv82FV0lqDb1ogHFdQMgt0d3H--0RxHWygtvmday5T-uO7YFIgdW7if_QW9L_9VllmmC9X7NL4U1zDep-zNqNYNQXG2SQ4zAe_ZFwTXiZ9-Pz2P_iWGoPfrveap85s_4q69VDmEUHl9bP8ZOR3PqMjzj9rFua9aOCfuo3zr7k_5F_VPNg_BYz_J8UrPdzucfQInTiyVoBxWhF9Vg-KgVZVx1S
' Generated on: 2026-02-05T14:28:36.102621

@startuml
package data_storage{
  class FileLoader {
    -file: File
    --
    +loadFiles(input: String): List<File>
    +getFile(): File
  }
  class ConfigLoader {
    +loadConfig(path: String): LinterConfig
  }
}

package domain{
  class SnakeLinter {
    +lint(files: List<File>): String
    -findTrailingWhitespaceLines(file: File): List<Integer>
    -hasTrailingWhitespace(line: String): boolean
  }

  abstract class AbstractASMLinter implements Linter {
    +lint(files: List<File>): String
    #lintClass(classNode: ClassNode, allClasses: List<ClassNode>, result: StringBuilder): int
    #getNoViolationsMessage(): String
    #getViolationsMessage(violationCount: int, result: StringBuilder): String
  }


  class ExampleLinter2 {
    +lint(files: List<File>): String
  }
  
  class PublicNonFinalFieldLinter {
    +lintClass(classNode: ClassNode, allClasses: List<ClassNode>, result: StringBuilder): int
    getNoViolationsMessage(): String
    getViolationsMessage(violationCount: int, result: StringBuilder): String
  }
  class TooManyParametersLinter  {
    +lintClass(classNode: ClassNode, allClasses: List<ClassNode>, result: StringBuilder): int
    isSkippableMethod(method: MethodNode): boolean
    getNoViolationsMessage(): String
    getViolationsMessage(violationCount: int, result: StringBuilder): String
  }
  class SingletonPatternLinter {
    +lintClass(classNode: ClassNode, allClasses: List<ClassNode>, result: StringBuilder): int
    hasPrivateConstructors(classNode: ClassNode): boolean
    findSingletonField(classNode: ClassNode): FieldNode
    hasPublicStaticAccessor(classNode: ClassNode, singletonField: FieldNode): boolean
    getNoViolationsMessage(): String
    getViolationsMessage(violationCount: int, result: StringBuilder): String
  }
  class LinterConfig {
    +getTooManyParametersLimit(): int
    +getSrpLcomThreshold(): int
    +isLinterEnabled(linterType: Class): boolean
  }
  interface Linter {
    lint(files: List<File>): String
  }
}

package presentation{
  class LinterMain {
    -availableLinters: List<Linter>
    -fileLoader: FileLoader
    -configLoader: ConfigLoader
    -scanner: Scanner
    --
    +LinterMain()
    +{static} main(args: String[]): void
    +loadLinters(config: LinterConfig): void
    -addIfEnabled(linter: Linter, linterType: Class, config: LinterConfig): void
    +run(): void
    -askForFileInput(): String
    -displayResult(result: String): void
    -runLinters(linters: List<Linter>, files: List<File>): String
  }
}

SnakeLinter ..|> Linter
ExampleLinter2 ..|> Linter
TooManyParametersLinter --|> AbstractASMLinter
LinterMain o-- Linter
LinterMain *-- FileLoader
LinterMain *-- ConfigLoader
ConfigLoader ..> LinterConfig
LinterMain ..> LinterConfig
PublicNonFinalFieldLinter --|> AbstractASMLinter
SingletonPatternLinter --|> AbstractASMLinter
@enduml